[package]
name = "crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erigon-db = { git = "https://github.com/vacekj/erigon-db", version = "0.1.0" }

ethers = { version = "*" }
indicatif = "0.17.3"
tokio = { version = "1.0", features = ["full"] }
